--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,14 @@
 [versions]
 kotlin = "2.1.20"
-google-cloud-speech = "4.18.0"
+okhttp = "4.10.0"
+gson = "2.10.1"
 jlayer = "1.0.1.4"
 
 [libraries]
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
-google-cloud-speech = { module = "com.google.cloud:google-cloud-speech", version.ref = "google-cloud-speech" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+okhttp-ws = { module = "com.squareup.okhttp3:okhttp-ws", version.ref = "okhttp" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 jlayer = { module = "com.googlecode.soundlibs:jlayer", version.ref = "jlayer" }
 
 [plugins]
